deploy/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman-app
    app.kubernetes.io/name: pacman-app
  name: pacman-app
  namespace: pacman-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pacman-app
      app.kubernetes.io/name: pacman-app
  template:
    metadata:
      labels:
        name: pacman-app
        app.kubernetes.io/name: pacman-app
    spec:
      containers:
      - image: quay.io/jpacker/nodejs-pacman-app:green
        name: pacman-app
        ports:
        - containerPort: 8080
          name: http-server
