deploy/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-app
  namespace: pacman-app
  labels:
    name: pacman-app
    app.kubernetes.io/name: pacman-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman-app
    app.kubernetes.io/name: pacman-app
