deploy/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman-app
  namespace: pacman-app
  labels:
    app.kubernetes.io/name: pacman-app
spec:
  path: "/"
  to:
    kind: Service
    name: pacman-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman-app-chk
  namespace: pacman-app
  labels:
    app.kubernetes.io/name: pacman-app
spec:
  path: "/"
  to:
    kind: Service
    name: pacman-app
  host: pacman-app.kcdc.rhlabs.io
